--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -28,7 +28,8 @@ jobs:
     needs: python-dependencies
     strategy:
       matrix:
-        mutation-package-under-test: [ authentication, forms, publisher, questionnaire, routes ]
+#        mutation-package-under-test: [ authentication, forms, publisher, questionnaire, routes ]
+        mutation-package-under-test: [ authentication, forms, publisher, questionnaire ]
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
@@ -61,22 +62,30 @@ jobs:
       - name: Run mutmut
         run: |
             # hacky way to handle unit and integration paths for the package under test for now
-            packages_to_run_with_pytest=""
-            if [ -d tests/app/${{ matrix.mutation-package-under-test }} ]; then
-                packages_to_run_with_pytest="tests/app/${{ matrix.mutation-package-under-test }}"
-            fi
+            #            packages_to_run_with_pytest=""
+            #            if [ -d tests/app/${{ matrix.mutation-package-under-test }} ]; then
+            #                packages_to_run_with_pytest="tests/app/${{ matrix.mutation-package-under-test }}"
+            #            fi
+            #
+            #            if [ -d tests/integration/${{ matrix.mutation-package-under-test }} ]; then
+            #                packages_to_run_with_pytest="${packages_to_run_with_pytest} tests/integration/${{ matrix.mutation-package-under-test }}"
+            #            fi
 
-            if [ -d tests/integration/${{ matrix.mutation-package-under-test }} ]; then
-                packages_to_run_with_pytest="${packages_to_run_with_pytest} tests/integration/${{ matrix.mutation-package-under-test }}"
-            fi
-
-            echo ${packages_to_run_with_pytest}
+            #            packages_to_run_with_pytest=""
+            #            echo ${packages_to_run_with_pytest}
+            #
+            #            pipenv run mutmut run \
+            #                --paths-to-mutate "app/${{ matrix.mutation-package-under-test }}/" \
+            #                --runner "py.test -n auto ${packages_to_run_with_pytest}" \
+            #                --no-progress \
+            #                --CI
 
             pipenv run mutmut run \
                 --paths-to-mutate "app/${{ matrix.mutation-package-under-test }}/" \
-                --runner "py.test -n auto ${packages_to_run_with_pytest}" \
+                --runner "py.test -n auto ${{ matrix.mutation-package-under-test }}" \
                 --no-progress \
                 --CI
+
       - name: Save HTML output
         run: |
             pipenv run mutmut html
